Add new ksqlDB server to demo ksqlDB server down.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,13 +111,50 @@ services:
       KSQL_CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
       KSQL_CONNECT_PLUGIN_PATH: "/usr/share/kafka/plugins"
       KSQL_LOG4J_LOGGERS: "org.apache.zookeeper=DEBUG,org.I0Itec.zkclient=DEBUG,org.reflections=DEBUG"
+      KSQL_KSQL_LAG_REPORTING_ENABLE: "true"
+    volumes:
+      - ./confluent-hub-components/:/usr/share/kafka/plugins/
+    networks:
+      - demonetwork
+
+  ksqldb-server2:
+    image: confluentinc/ksqldb-server:0.28.2
+    hostname: ksqldb-server2
+    container_name: ksqldb-server2
+    depends_on:
+      - broker
+    ports:
+      - "8188:8088"
+    environment:
+      KSQL_BOOTSTRAP_SERVERS: "broker:19092"
+      KSQL_HOST_NAME: ksqldb-server2
+      KSQL_LISTENERS: "http://0.0.0.0:8088"
+      KSQL_CACHE_MAX_BYTES_BUFFERING: 0
+      KSQL_KSQL_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+      KSQL_KSQL_LOGGING_PROCESSING_TOPIC_REPLICATION_FACTOR: 1
+      KSQL_KSQL_LOGGING_PROCESSING_TOPIC_AUTO_CREATE: 'true'
+      KSQL_KSQL_LOGGING_PROCESSING_STREAM_AUTO_CREATE: 'true'
+      KSQL_CONNECT_GROUP_ID: "ksql-connect-cluster"
+      KSQL_CONNECT_BOOTSTRAP_SERVERS: "broker:9092"
+      KSQL_CONNECT_KEY_CONVERTER: "org.apache.kafka.connect.storage.StringConverter"
+      KSQL_CONNECT_VALUE_CONVERTER: "io.confluent.connect.avro.AvroConverter"
+      KSQL_CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+      KSQL_CONNECT_CONFIG_STORAGE_TOPIC: "_ksql-connect-configs"
+      KSQL_CONNECT_OFFSET_STORAGE_TOPIC: "_ksql-connect-offsets"
+      KSQL_CONNECT_STATUS_STORAGE_TOPIC: "_ksql-connect-statuses"
+      KSQL_CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
+      KSQL_CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
+      KSQL_CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+      KSQL_CONNECT_PLUGIN_PATH: "/usr/share/kafka/plugins"
+      KSQL_LOG4J_LOGGERS: "org.apache.zookeeper=DEBUG,org.I0Itec.zkclient=DEBUG,org.reflections=DEBUG"
+      KSQL_KSQL_LAG_REPORTING_ENABLE: "true"
     volumes:
       - ./confluent-hub-components/:/usr/share/kafka/plugins/
     networks:
       - demonetwork
 
   ksqldb-cli:
-    image: confluentinc/ksqldb-cli:0.26.0
+    image: confluentinc/ksqldb-cli:0.28.2
     container_name: ksqldb-cli
     depends_on:
       - broker
